--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar">
+        <div class="sidebar">j
             <div>
                 <form class="search" id="search">
                     <input type="text" id="query" placeholder="Search..." />
